--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.1",
+    "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "styled-components": "^4.1.3",
     "webpack": "^5.0.0",
