--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
     "styled-components": "^4.1.3",
+    "uuid": "^9.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
