--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime": "^7.4.3",
     "babel-loader": "^8.0.5",
     "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "postcss-loader": "^7.0.0",
     "prop-types": "^15.7.2",
